--- a/src/language/ english.json
+++ b/src/language/ english.json
@@ -1,3 +1,17 @@
-{
-    "mensaje":"hello word"
+{ 
+    
+    "home":"Home",
+    "servicios":"Services",
+    "documentos":"Documents",
+    "precios":"Prices",
+    "ambientes":"Environments",
+    "tipoDocumentos":"Type of documents",
+    "tipoServicios":"Type of Services",
+    "muestras":"Specimen",
+    "variables":"Variables",
+    "configuraciones":"Settings",
+    "alquiler":"Laboratory Rental",
+    "reportes":"Reports",
+    "facturas":"Invoices",
+    "salir":"Exit"
 }
