--- a/src/language/spanish.json
+++ b/src/language/spanish.json
@@ -12,5 +12,6 @@
     "alquiler":"Alquiler de Laboratorio",
     "reportes":"Reportes",
     "facturas":"Facturas",
-    "salir":"Salir"
+    "salir":"Salir",
+    "nuevo":"Nuevo"
 }
