agrege nuevo,estado,nombre en los json de traducion

--- a/src/language/ english.json
+++ b/src/language/ english.json
@@ -13,5 +13,8 @@
     "reportes": "Reports",
     "facturas": "Invoices",
     "salir": "Exit",
-    "nuevo": "New"
+    "nuevo": "New",
+    "estado":"State",
+    "nombre":"Name"
+
 }
