--- a/src/language/spanish.json
+++ b/src/language/spanish.json
@@ -13,5 +13,7 @@
     "reportes":"Reportes",
     "facturas":"Facturas",
     "salir":"Salir",
-    "nuevo":"Nuevo"
+    "nuevo":"Nuevo",
+    "estado":"Estado",
+    "nombre":"Nombre"
 }
