--- a/src/language/spanish.json
+++ b/src/language/spanish.json
@@ -6,7 +6,7 @@
     "ambientes": "Ambientes",
     "tipoDocumentos": "Tipo de Documento",
     "tipoServicios": "Tipo de Servicio",
-    "muestras": "Mustra",
+    "muestras": "Muestra",
     "variables": "Variables",
     "configuraciones": "Configuraciones",
     "alquiler": "Alquiler de Laboratorio",
