funcion de actulizar documentos sin generar una version nueva

--- a/src/language/ english.json
+++ b/src/language/ english.json
@@ -32,5 +32,6 @@
     "cerrar": "Close",
     "idioma": "language",
     "ingles": "English",
-    "espanol": "Spanish"
+    "espanol": "Spanish",
+    "tipoEntrada": "Select input or output"
 }
