--- a/src/language/spanish.json
+++ b/src/language/spanish.json
@@ -32,5 +32,6 @@
     "cerrar": "Cerrar",
     "idioma": "idioma",
     "ingles": "Ingles",
-    "espanol": "Español"
+    "espanol": "Español",
+    "tipoEntrada": "Selecione entrada o salida"
 }
