carrusel home y documentos le mojore los estilos y solucione problemas con documentos

--- a/src/language/spanish.json
+++ b/src/language/spanish.json
@@ -1,5 +1,5 @@
 {
-    "home": "Casa",
+    "home": "Inicio",
     "servicios": "Servicios",
     "documentos": "Documentos",
     "precios": "Precios",
