validando roles en muestra y tipo de servicio, ademas de la traduccion completa de los modulos de muestra, tipo servicio y tipo documento

--- a/src/language/ english.json
+++ b/src/language/ english.json
@@ -33,5 +33,42 @@
     "idioma": "language",
     "ingles": "English",
     "espanol": "Spanish",
-    "tipoEntrada": "Select input or output"
+    "tipoEntrada": "Select input or output",
+    "NombreDocumento": "Name of document",
+    "registrarDocumento": "Register new document type",
+    "NombreServicio": "Name of service",
+    "CodigoServicio": "Code of service",
+    "registrarServicio": "Register new service type",
+    "agregarMuestra": "Insert Sample",
+    "agregarFinca": "Insert Farm",
+    "agregarCliente": "Insert Customer",
+    "cantidad": "Quantity",
+    "unidad": "Unit",
+    "fecha": "Date",
+    "finca": "Farm",
+    "usuario": "User",
+    "altura": "Height (M)",
+    "alturaMetros": "Height (in meters)",
+    "variedad": "Variety",
+    "observaciones": "Observations",
+    "imagen": "Image",
+    "subirImagen": "Upload image",
+    "seleccionaArchivo": "Select a file",
+    "arrastraSuelta": "or drag and drop",
+    "hasta": "PNG, JPG, SVG, GIF up to 10MB",
+    "unidadMedida": "Unit of measure",
+    "añadirCodExterno": "Add external code",
+    "ocultarCodExterno": "Hide external code",
+    "CodExternoAplica": "External Code (if applicable)",
+    "registrarMuestra": "Register new sample",
+    "editarMuestra": "Edit Sample",
+    "nombreFinca": "Name of the farm",
+    "nombreVereda": "Name of the Village",
+    "seleccioneMunicipio": "Select a Municipality",
+    "apellidos": "Last names",
+    "correo": "Email address",
+    "telefono": "Telephone",
+    "contraseña": "Password",
+    "NDocumento": "Document Number",
+    "tipoDocumento": "Document Type"
 }
