agregando unidad de medida a precios

--- a/src/language/ english.json
+++ b/src/language/ english.json
@@ -70,5 +70,7 @@
     "telefono": "Telephone",
     "contraseña": "Password",
     "NDocumento": "Document Number",
-    "tipoDocumento": "Document Type"
+    "tipoDocumento": "Document Type",
+    "tipoDeDatos":"type of data",
+    "editar":"edit"
 }
