--- a/src/language/ english.json
+++ b/src/language/ english.json
@@ -47,6 +47,7 @@
     "fecha": "Date",
     "finca": "Farm",
     "usuario": "User",
+    "usuarios": "Users",
     "altura": "Height (M)",
     "alturaMetros": "Height (in meters)",
     "variedad": "Variety",
@@ -72,5 +73,45 @@
     "NDocumento": "Document Number",
     "tipoDocumento": "Document Type",
     "tipoDeDatos":"type of data",
-    "editar":"edit"
+    "editar":"Edit",
+    "buscar": "Search",
+    "enviar": "Send",
+    "cambioestadologo": "Change the status of Logo",
+    "cambioestadousuario": "Change the status of User",
+    "cambioestadoexitoso": "Status changed succesfully",
+    "cambioestadofallido": "Error changing the status",
+    "operacioncancelada": "Operation Canceled",
+    "ingreseNombreLogo": "Enter the name of the logo",
+    "seleccionaTuLogo": "Select your logo",
+    "registroDeLogo": "Logo Registration",
+    "actualizarLogo": "Update Logo",
+    "confirmacion": "Confirmation",
+    "documento": "Document",
+    "tipo": "Type",
+    "rol": "Role",
+    "admin": "Admin",
+    "encargado": "In Charge",
+    "cliente": "Client",
+    "operario": "Worker",
+    "total": "Total",
+    "nuevoUsuario": "New User",
+    "ingreseNombreUsuario": "Enter the user's name",
+    "ingreseApellidoUsuario": "Enter the user's last name",
+    "ingreseCorreoUsuario": "Enter the user's email",
+    "ingreseTelefonoUsuario": "Enter the user's phone number",
+    "ingreseContrasenaUsuario": "Enter the user's password",
+    "ingreseNumeroIdentificacion": "Enter the user's identification number",
+    "registroUsuarios": "User Registration",
+    "informacion": "Information",
+    "nombres": "Names",
+    "identificacion": "Identification",
+    "contrasena": "Password",
+    "cambiaContrasena": "Change your password",
+    "actualizarUsuario": "Update User",
+    "ingresaContraseñaActual": "Enter the current password",
+    "ingresaContraseñaNueva": "Enter the new password",
+    "actualizarContraseña": "Update Password",
+    "miPerfil": "My Profile",
+    "logos": "Logos",
+    "ayuda": "Help"
 }
