validaciones de servicios y cambio de idioma

--- a/src/language/ english.json
+++ b/src/language/ english.json
@@ -113,5 +113,35 @@
     "actualizarContraseña": "Update Password",
     "miPerfil": "My Profile",
     "logos": "Logos",
-    "ayuda": "Help"
+    "ayuda": "Help",
+    "Nuevo servicio": "New service",
+    "Filtro": "Filter",
+    "Filtro por muestra...": "Filter by sample...",
+    "Tipo servicio": "Type of service",
+    "Fecha": "Date",
+    "Nombre ambiente": "Name environment",
+    "Codigo muestra": "Sample code",
+    "Presentación": "Presentation",
+    "Encargado": "responsible",
+    "Rol": "Role",
+    "Estado": "State",
+    "Acciones": "Actions",
+    "No hay datos":"No data available",
+    "Nuevo Servicio":"New Service",
+    "Ingresar muestra":"Enter sample",
+    "Selecciona la Presentación":"Select the presentation",
+    "Seleccionar":"Select",
+    "Enviar":"Send",
+    "Variables del servicio":"Service Variables",
+    "Selecciona el Ambiente":"Select the Environment",
+    "Buscar":"Search",
+    "muestra":"sample",
+    "Ingrese":"Enter",
+    "Registro termino de servicio":"End of service registration",
+    "Cantidad de salida en":"Output quantity in",
+    "Editar valores del servicio":"Edit service values",
+    "Descripción":"Description",
+    "Muestra":"Sample",
+    "Responsable":"Responsible"
+
 }
