traduccion palabra cambio del menu

--- a/src/language/ english.json
+++ b/src/language/ english.json
@@ -148,6 +148,6 @@
     "Editar valores del servicio":"Edit service values",
     "Descripción":"Description",
     "Muestra":"Sample",
-    "Responsable":"Responsible"
-
+    "Responsable":"Responsible",
+    "cambios":"changes"
 }
